--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,23 @@ body {
     background-color: #333;
 }
 
-h1 {
-    text-align: center;
+.body-carrinho{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #333;
 }
 
+h1, h2, h3, h4, h5{
+    text-align: center;
+    color: #fff;
+    font-size: 30px;
+}
+
+h6, span, #status {
+    font-size: 25px;
+    margin: 20px;
+}
 
 /* Estilos para o menu */
 
@@ -63,6 +76,18 @@ li a:hover {
 }
 
 
+
+#statusCafeteria {
+    font-weight: bold;
+}
+
+.aberto {
+    color: green;
+}
+
+.fechado {
+    color: red;
+}
 /* Estilos para o formulário */
 
 .formulario {
@@ -103,6 +128,9 @@ th {
     color: #fff;
 }
 
+textarea {
+    resize: none;
+  }
 
 /* Propriedades de formatação de fontes, textos e cores */
 
@@ -167,8 +195,18 @@ p {
 .cardapio-body {
     background-color: #1b1b1f;
     /* Substitua pela cor desejada para o cardápio */
-    margin: 0;
+    display: block;
     /* Remove a margem padrão do corpo da página */
+}
+
+.cardapio-carrossel{
+    background-color: #1b1b1f;
+    /* Substitua pela cor desejada para o cardápio */
+    width: 500px;
+    height: 400px;
+    margin-bottom: 200px;
+    margin-left: 33%;
+    display: block;
 }
 
 .cardapio-h1 {
@@ -194,6 +232,7 @@ p {
 }
 
 .item img {
+    
     max-width: 100%;
     height: auto;
 }
@@ -412,4 +451,154 @@ footer {
 .texto-lateral p {
     font-size: 16px;
     color: #333;
+}
+
+#sessaoComentarios{
+    background-color: #666;
+    text-align: center;
+    margin: 20px 600px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 25px;
+    background-color: #fff;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#sessaoComentarios h5{
+    color: #1b1b1f;
+
+}
+
+
+/*carrossel------------------------ */
+.slideshow-container {
+    
+    width: 100%;
+    position: relative;
+    margin: auto;
+
+}
+
+.slideshow {
+    display: none;
+}
+
+
+.slideshow-container img { 
+    width:100%; 
+    height: 400px;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+.legenda {
+
+    width: auto;
+    color: #fdfdfd;
+    font-size: 0.9em;
+    padding:5px;
+    position: absolute;
+    bottom: 18%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    left: 10%;
+
+}
+
+.numeracao {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+
+}
+
+.paginacao { 
+  
+    width:100%; 
+    float:left;
+    margin: 10px 0;
+    text-align: center;
+
+}
+
+.dot {
+
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 4px;
+    border-radius: 50px;
+    background-color: #007cff;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.ativo,
+.dot:hover {
+    background-color: #242424;
+}
+
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2s;
+    animation-name: fade;
+    animation-duration: 2s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/*960PX BREAKPOINT - Ajustando o texto para desktop*/
+@media (min-width:60em){
+
+
+    .legenda   { font-size:2em; padding:8px; }
+    .paginacao { margin:20px 0; }
+    .dot       { width:18px; height:18px; }
 }
